--- a/src/App.module.less
+++ b/src/App.module.less
@@ -21,14 +21,28 @@ body {
   width: 80%;
   margin: auto;
 
+  @media (max-width: 900px) {
+    flex-direction: column;
+    width: 95%;
+  }
+
   .form {
     display: flex;
     flex-direction: column;
     width: 35%;
     margin-right: 15px;
+
+    @media (max-width: 900px) {
+      width: 100%;
+      margin-bottom: 35px;
+    }
   }
 
   .tasks {
     width: 65%;
+
+    @media (max-width: 900px) {
+      width: 100%;
+    }
   }
 }
