--- a/src/App.module.less
+++ b/src/App.module.less
@@ -10,6 +10,8 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: rgba(255, 255, 255, 0.87);
 }
 
 .navBar {
